Perch/uploads/log1.txt
In file included from ../../../src/include/executor/execdesc.h:19:
../../../src/include/nodes/execnodes.h:1144:21: error: expected ';' at end of declaration list
        bool            probing_inner = false; //CSI3130: indicates whether the inner table is being probed (true), or outer otherwise (false)
                                     ^
                                     ;
nodeHash.c:813:1: error: unknown type name 'HashTuple'; did you mean 'HeapTuple'?
HashTuple //CSI3130 Changed return type from HeapTuple to HashTuple
^~~~~~~~~
HeapTuple
../../../src/include/access/htup.h:393:24: note: 'HeapTuple' declared here
typedef HeapTupleData *HeapTuple;
                       ^
nodeHash.c:818:37: error: no member named 'hj_HashTable' in 'struct HashJoinState'
        HashJoinTable hashtable = hjstate->hj_HashTable;
                                  ~~~~~~~  ^
nodeHash.c:819:37: error: no member named 'hj_CurTuple' in 'struct HashJoinState'
        HashJoinTuple hashTuple = hjstate->hj_CurTuple;
                                  ~~~~~~~  ^
nodeHash.c:820:31: error: no member named 'hj_CurHashValue' in 'struct HashJoinState'
        uint32          hashvalue = hjstate->hj_CurHashValue;
                                    ~~~~~~~  ^
nodeHash.c:827:3: error: use of undeclared identifier 'bucketNo'
                bucketNo = hjstate -> inner_hj_CurBucketNo;
                ^
nodeHash.c:828:3: error: use of undeclared identifier 'tupleSlot'
                tupleSlot = hjstate -> hj_InnerTupleSlot;
                ^
nodeHash.c:834:3: error: use of undeclared identifier 'bucketNo'
                bucketNo = hjstate -> outer_hj_CurBucketNo;
                ^
nodeHash.c:835:3: error: use of undeclared identifier 'tupleSlot'
                tupleSlot = hjstate -> hj_OuterTupleSlot;
                ^
nodeHash.c:843:43: error: no member named 'hj_CurBucketNo' in 'struct HashJoinState'
                hashTuple = hashtable->buckets[hjstate->hj_CurBucketNo];
                                               ~~~~~~~  ^
nodeHash.c:866:14: error: no member named 'hj_CurTuple' in 'struct HashJoinState'
                                hjstate->hj_CurTuple = hashTuple;
                                ~~~~~~~  ^
11 errors generated.
make[3]: *** [<builtin>: nodeHash.o] Error 1
make[3]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src/backend/executor'
make[2]: *** [Makefile:110: executor-recursive] Error 2
make[2]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src/backend'
make[1]: *** [Makefile:19: all] Error 2
make[1]: Leaving directory '/mnt/c/Users/Noura/Desktop/Uni/2023-2024/Fall/CSI 3130/postgresql-8.1.7/src'
make: *** [GNUmakefile:13: all] Error 2